--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Kpopify</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="playlist_title">K-pop hits</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
