--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Kpopify</string>
     <string name="playlist_title">K-pop Mix</string>
+    <string name="player_notification_channel_name">Playback</string>
+    <string name="player_notification_channel_description">Playback notification for Kpopify</string>
 </resources>
