--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">Kpopify</string>
+    <string name="song_window_transition_name" translatable="false">song_window</string>
     <string name="playlist_title">K-pop Mix</string>
-    <string name="player_notification_channel_name">Playback</string>
-    <string name="player_notification_channel_description">Playback notification for Kpopify</string>
+    <string name="playback_notification_channel_name">Playback</string>
+    <string name="playback_notification_channel_description">Playback notification for Kpopify</string>
     <string name="current_song_title">%1$s • %2$s</string>
     <string name="try_again">Try again</string>
     <string name="empty_playlist_reason">Sorry, we couldn\'t find the best K-pop mix for you. Please check your Internet connection.</string>
