--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="current_song_title">%1$s • %2$s</string>
     <string name="try_again">Try again</string>
     <string name="empty_playlist_reason">Sorry, we couldn\'t find the best K-pop mix for you. Please check your Internet connection.</string>
+    <string name="playback_network_error">Network connection lost. Please try again</string>
 </resources>
